fix: wrap social media links in a div for better styling

--- a/src/shared/components/Footer/Footer.module.css
+++ b/src/shared/components/Footer/Footer.module.css
@@ -20,6 +20,11 @@
 	gap: 1rem;
 }
 
+.social {
+	display: flex;
+	gap: 1rem;
+}
+
 .credit {
 	flex-grow: 1;
 }
